--- a/hello.html
+++ b/hello.html
@@ -1,1 +1,20 @@
-<h1>hello</h1>
+<html>
+    <head>
+        <title>Ana</title>
+    </head>
+    <body>
+        <h1>Ana</h1>
+        <ul>
+            <li>responsabila</li>
+            <li>constiincioasa</li>
+            <li>ambitioasa</li>
+        </ul>
+        <p><a href="https://github.com/AnaMariaPopescu/webtech-ep1">GitHub</a></p>
+        <form>
+            <label for="Nume">Nume:</label>
+            <input type="text" nume=nume id="nume" value=" " />
+            <label for="Mesaj">Mesaj:</label>
+            <input type="text" nume=mesaj id="mesaj" value=" " />
+        </form>
+    </body>
+</html>
